flux/infrastructure/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    gateway-access: "true"
