flux/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: "*.stehessel.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
          # from: Selector
          # selector:
          #   matchLabels:
          #     gateway-access: "true"
    - name: https
      hostname: "*.stehessel.org"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: stehessel-org-tls
    # - name: syncthing-tcp
    #   protocol: TCP
    #   port: 22000
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchLabels:
    #           gateway-access: "true"
    # - name: syncthing-udp
    #   protocol: UDP
    #   port: 22000
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchLabels:
    #           gateway-access: "true"
